# k8s

./: README.md
dev/: ichef-api.yml  interlisp.yml  jenkins.yml  mariadb.yml  person.surql  pgadmin.yml  phpmyadmin.yml  postgres9.yml  postgresql.yml  rabbitmq.yml  surrealdb.yml
examples/newsqldb/: Cargo.toml
examples/newsqldb/src/: main.rs  model.rs
iot/mosquitto/: kustomization.yml  mosquitto-config.yml  mosquitto-pw.yml  mosquitto.yml
misc/: browservice.yml  minecraft-server-digitalocean.yml  minecraft-server.yml  misctools.yml  transmission.yml
open-webui/: docker-compose.yml
rpi-config/: install.yml  inventory.yml  uninstall.yml
