[package]
name = "newsqldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
